# SignBridge

./: .env.example  .gitignore  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  turbo.json
.github/workflows/: ci.yml
apps/api/: .dockerignore  .env.example  .eslintrc.json  Dockerfile  package.json  tsconfig.json  vitest.config.ts
apps/api/prisma/: schema.prisma
apps/api/prisma/migrations/20260615201115_init/: migration.sql
apps/api/prisma/migrations/20260615204727_auth/: migration.sql
apps/api/src/: app.ts  index.ts
apps/api/src/config/: env.ts
apps/api/src/lib/: ice.ts  jwt.ts  password.ts  prisma.ts
apps/api/src/middleware/: asyncHandler.ts  auth.ts  error.ts  notFound.ts  validate.ts
apps/api/src/realtime/: socket.test.ts  socket.ts
apps/api/src/routes/: auth.test.ts  auth.ts  calls.test.ts  calls.ts  conversations.test.ts  conversations.ts  emergency.test.ts  emergency.ts  health.test.ts  health.ts  index.ts  learning.test.ts  learning.ts  sign-samples.test.ts  sign-samples.ts  translate.test.ts  translate.ts  users.test.ts  users.ts
apps/api/src/services/: auth.service.ts
apps/api/src/validation/: auth.schema.ts  conversation.schema.ts  emergency.schema.ts  learning.schema.ts  sign.schema.ts  translation.schema.ts  user.schema.ts
apps/web/: .dockerignore  .env.example  Dockerfile  next.config.mjs  package.json  tailwind.config.ts  tsconfig.json
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/components/: AppShell.tsx  AvatarStage.tsx  FeatureCard.tsx  NavDrawer.tsx  PageHeader.tsx  ProtectedRoute.tsx  SignPoseView.tsx
apps/web/src/lib/: api.ts  auth-api.ts  auth-context.tsx  conversations-api.ts  emergency-api.ts  learning-api.ts  nav.ts  settings-context.tsx  translation-api.ts  users-api.ts
apps/web/src/types/: speech.d.ts
services/ml/: .env.example  Dockerfile  README.md  pyproject.toml  test_health.py
services/ml/app/: build_dataset_from_images.py  build_sign_poses.py  main.py  train_isl.py
(+62 files in other folders)
