[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "signbridge-ml"
version = "0.1.0"
description = "SignBridge ML service: dataset processing, training, and model export for ISL recognition."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic-settings>=2.3.0",
]

[project.optional-dependencies]
# Training dependencies are kept separate so the API container stays light.
# Installed locally when working on Phase 5 (ISL recognition).
train = [
    "tensorflow>=2.16.0",
    "mediapipe>=0.10.14",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "scikit-learn>=1.5.0",
]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
    "ruff>=0.5.0",
]

# Only `app` is a Python package; `models/` (model artifacts) and the egg-info
# folder must be excluded so setuptools doesn't fail flat-layout auto-discovery.
[tool.setuptools]
packages = ["app"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
# Be explicit about discovery so `pytest` reliably finds test_*.py here.
testpaths = ["."]
python_files = ["test_*.py"]
